--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
@@ -1,7 +1,7 @@
 
 ## Concepto de Máquina Abstracta
 
-Es un dispositivo teórico capas de recibir y transformar información. Cuentan una serie de propiedades que los caracterizan:
+Es un dispositivo teórico capas de recibir y transformar información. Cuentan con una serie de propiedades que los caracterizan:
 
 - **Evento**: cambio de valor de una señal en un instante de tiempo.
 - **Estado**: conjunto de atributos que representan las propiedades de un sistema u objeto en un determinado instante de tiempo.
