--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
@@ -26,7 +26,8 @@ Consta de 4 pasos:
 	- Se invierte la dirección de todos los arcos.
 4. Se transforma en un conjunto de reglas.
 	- Para cada nodo, se crea un símbolo no terminal de la gramática, excepto para el etiquetado con 𝜆.
-	- Para cada arco que va del nodo al B ∈ $Σ_N$ U {𝜆}, se crea la producción A::=Ba.
+	- Para cada arco que va del nodo A al B / B ∈ $Σ_N$ U {𝜆}, se crea la producción A::=Ba.
+	- Para cada arco que va del nodo A al 𝜆, se crea la producción A::= a.
 	- Si existe un arco vacío desde el axioma al nodo 𝜆, se crea una regla S::=𝜆.
 
 ## Automatas Finitos Asociados a una Gramática
