--- a/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
+++ b/3° Año/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
@@ -121,3 +121,13 @@ Se caracteriza por brindar las mejores herramientas de cada tipo de paradigma, 
 > - **Lenguajes híbridos:** Generalmente extendiendo de un lenguaje funcional o lógico, los lenguajes híbridos tienen como motivación principal proveer un amplio rango de programación estándar y resolver problemas complejos relativos a la inteligencia artificial.
 > - **Lenguajes de propósito general**: Estos buscan encontrar la mezcla “ideal” de los grandes paradigmas para brindar un medio de resolución de problemas mucho más general. ***Leda*** es un ejemplo de este enfoque.
 
+---
+
+>[!caution] Representación de los Programas de Acuerdo a su Paradigma
+>Los programas se pueden definir de diferentes maneras de acuerdo al paradigma bajo el cual hayan sido escritos.
+>
+>- **Imperativo** -> Algoritmos + Estructura de Datos.
+>- **Orientado a Objetos** -> Objetos + Mensajes.
+>- **Funcional** -> Funciones + Estructura de datos.
+>- **Lógico** -> Lógica + Control + Estructura de Datos.
+
