--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -4,7 +4,7 @@ Podemos decir que un programa está compuesto por entidades, dichas entidades pu
 Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en caso de una sentencia, uno de sus atributos pueden ser variables que se están sumando o incluso subprogramas al que se le asignara su retorno a una variable.
 
 >[!important] Relación entre las Entidades y sus Atributos
->Los atributos que tiene cada entidad son asignados a estas mediante las ***ligaduras o enlaces***.  El momento durante la formulación o procesamiento del programa en el que se hace esta elección se conoce como el tiempo de ligadura de esa propiedad para ese elemento. Estas ligaduras puede ser:
+>Los atributos son asignados a cada entidad mediante las ***ligaduras o enlaces***.  El momento durante la formulación o procesamiento del programa en el que se hace esta elección se conoce como el tiempo de ligadura de esa propiedad para ese elemento. Estas ligaduras puede ser:
 >- ***Estática***: La ligadura se hace antes de la ejecución del programa, lo que le brinda más eficiencia a los programas, a su vez las ligaduras estáticas se pueden clasificar de dos formas:
 >	- **Enlaces elegidos por el programador** -> Al escribir un programa, el programador toma conscientemente muchas decisiones respecto a opciones de nombres de variables, tipos para las variables, etc. Que representan enlaces durante la traducción. El traductor del lenguaje utiliza estos enlaces para determinar la forma final del programa objeto. Por ejemplo, la declaración de un tipo a una variable (en caso de que el lenguaje funciones de esa manera)
 >	- **Enlaces elegidos por el traductor** -> Ciertos enlaces son elegidos por el traductor del lenguaje sin que el programador los especifique directamente. Por ejemplo, la localidad relativa de un objeto de datos en el almacenamiento asignado para un procedimiento, esto se maneja en general sin el conocimiento o intervención del programador. Como se guardan los arreglos, en su caso, es otra decisión que toma el traductor del lenguaje.
