--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -46,7 +46,7 @@ Es una cadena de enlaces estáticos que vincula instancias de registro de activa
 
 #### Display
 
-Consiste en colocar los enlaces estáticos en una pila, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Profundidad estática. Veremos vas de sus peculiaridades en el siguiente ejemplo.
+Consiste en colocar los enlaces estáticos en una estructura auxiliar, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Desplazamiento de Cadena. Veremos vas de sus peculiaridades en el siguiente ejemplo.
 
 <span class="centerImg">![[LP-display-ej1.png]]  </span>
 
@@ -78,8 +78,9 @@ Las referencias de las variables no locales se encuentran buscando en las instan
 #### Acceso Superficial
 
 En nombre de las variables no están almacenadas en las instancias de registro de activación de la unidad, sino que en una estructura auxiliar, hay dos métodos para esto:
-	1. Crear una pila para cada nombre de variable, lo cual es muy costoso.
-	2. Crear una tabla central, en donde exista una entrada para cada nombre de variable, Lo que es mucho más rápido.
+
+1. Crear una pila para cada nombre de variable, lo cual es muy costoso.
+2. Crear una tabla central, en donde exista una entrada para cada nombre de variable, Lo que es mucho más rápido.
 
 <span class="centerImg"> ![[LP-acc-sup-ej1.png]] </span>
 
