--- a/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
+++ b/3° Año/Lenguajes de Programación/Unidad 4/1. Sistema de Tipos.md
@@ -46,7 +46,7 @@ O en caso de tomar el segundo concepto, podríamos decir que un sistema de tipos
 >
 >#### Compatibilidad de Tipos
 >
->Dos tipos de datos T1 y T2, se dicen equivalentes o compatibles si cualquier valor de tipo T1 puede ser asignado a una variable de tipo T2 y viceversa. Existen dos criterios para determinar la equivalencia:
+>Dos tipos de datos $T_1$ y $T_2$, se dicen equivalentes o compatibles si cualquier valor de tipo $T_1$ puede ser asignado a una variable de tipo $T_2$ y viceversa. Existen dos criterios para determinar la equivalencia:
 >- **Por Nombre**: Dos tipos de datos son considerados equivalentes solo si tienen el mismo nombre. Por ejemplo:
 >```Java
 >String nombre;
@@ -71,9 +71,9 @@ O en caso de tomar el segundo concepto, podríamos decir que un sistema de tipos
 La inferencia de tipos es el proceso por el cual el tipo de dato de una expresión se infiere o se determina, a partir de los tipos de datos que la componen. En un lenguaje con tipado estático el tipo de cada entidad debe establecerse explícitamente, por otro lado, en los lenguajes de tipado dinámico esto no es tan así, ahí es donde entra en juego la inferencia de tipos, y las diferentes maneras en las que se puede inferir el tipo de una expresión. Tomando como ejemplo el lenguaje de programación ML veremos que la inferencia se puede dar de acuerdo a:
 
 - **Un operador predefinido** -> *fun even(n) = (n mod 2 = 0);* en este caso el operador *mod* recibe como operandos a dos números enteros, por lo que *n* se infiere que es un entero
-- **Un operando** -> *fun times(n) = 10 * n;* para este caso *n* va a ser un valor de un tipo específico, por lo que de acuerdo a el valor de ese operando la expresión va a inferir su tipo.
+- **Un operando** -> *fun times(n) = 10 \* n;* para este caso *n* va a ser un valor de un tipo específico, por lo que de acuerdo a el valor de ese operando la expresión va a inferir su tipo.
 - **Un argumento** -> *fun integ(n: int) = n * n;* para las declaraciones en donde se reciben como argumentos parámetros y se realizan operaciones sobre estas mismas, el tipo es determinado mediante este mismo parámetro.
-- **El tipo del resultado** -> *fun integ(n): int = (n * n);* no solo en ML, sino que también en muchos otros lenguajes, el tipo de datos se infiere mediante el retorno de la función o un método.
+- **El tipo del resultado** -> *fun integ(n): int = (n \* n);* no solo en ML, sino que también en muchos otros lenguajes, el tipo de datos se infiere mediante el retorno de la función o un método.
 
 ## Polimorfismo
 
