--- a/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y Constantes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y Constantes.md
@@ -25,14 +25,14 @@ Existen dos tipos de constantes:
 - **Tipo**: Establece el rango de valores y el conjunto de operaciones definidas para los valores del tipo. Los tipos pueden ligarse de forma dinámica (durante la ejecución) o estática (en compilación), además las declaraciones de tipos se pueden hacer de manera implícita, es decir, se asigna el tipo de dato en el momento que usamos la entidad; o explicita, en donde se debe declarar el tipo y el nombre del identificador por adelantado.
 - **Tiempo de vida**: Es el intervalo en el cual una variable está ligada a un área de almacenamiento específica. Comienza cuando se liga a una celda específica y finaliza cuando se desliga de la celda. De aquí surgen dos términos, ***alocación y desalocación***. El tiempo de vida va a variar de acuerdo a como sea la ligadura, de acuerdo a esto podremos clasificarlas en:
 	- ***Estáticas***: La variable se liga a la celda de memoria antes de la ejecución y permanece ligada durante toda la ejecución. El mejor ejemplo de esto son las variables declaradas con el modificador *static* en C/C++.
-		- Es más eficiente, pero no permite la recursividad, además de que afecta la flexibilidad y los programas son sensibles a la historia, es decir, cunado se asigna una variable a una celda de memoria, puede que esa esté ocupada y produzca resultados no deseados en la ejecución.
+		- Es más eficiente, pero no permite la recursividad, además de que afecta la flexibilidad y los programas son sensibles a la historia, es decir, cunado se asigna una variable a una celda de memoria, puede que siga teniendo información de otras entidades y produzca resultados no deseados en la ejecución.
 	- ***Dinámicas en pila***: La ligadura de almacenamiento para las variables se produce cuando se alcanza la ejecución de la declaración. Elaboración. Por Ej.: la declaración de una variable que aparece en el inicio de un método en Java es elaborada cuando se llama al método.
 		- Permiten la recursividad, pero el costo de asignación y desasignación son mayores, además los subprogramas no son sensibles a la historia y pueden llegar a ocurrir referencias ineficientes (direccionamiento indirecto).
 	- ***Dinámicas en heap explicitas***: Se vincula y desvincula memoria cuando es necesario durante la ejecución, a través de directivas explícitas realizadas por el programador. Las variables pueden ser referenciadas usando punteros o referencias.
 		- Ofrece una gestión de almacenamiento dinámico, pero son muy Ineficiente.
 	- ***Dinámicas en heap implícitas***: Se vincula y desvincula memoria a través de sentencias de asignación.
 		- Poseen mayor flexibilidad, pero son ineficiente, ya que todos los atributos son dinámicos y es más difícil la detección de errores.
-- **Valor**: La ligadura de los valores de constantes nominadas puede ser estáticas, como en el caso de FORTRAN con la asignación de valores literales. O dinámicas, en el cual se pueden realizar asignaciones a las constantes mediante el uso de operadores y referencias a otras entidades, por ejemplo la siguiente sentencia en C++ -> ***const int result = 2 + width + 1;***
+- **Valor**: La ligadura de los valores de constantes nominadas puede ser estáticas, como en el caso de FORTRAN con la asignación de valores literales. O dinámicas, en el cual se pueden realizar asignaciones a las constantes mediante el uso de operadores y referencias a otras entidades, por ejemplo la siguiente sentencia en C++ -> ***const int result = 2 \* width + 1;***
 - **Locación**: Dirección o área de memoria a la que está asociada la variable. También denominada *L-value*.
 - **Alias**: Cuando dos nombres diferentes de variables están asociados a la misma dirección de memoria en el mismo momento. Los alias son creados a través de punteros, o por variables de referencia, o por uniones en C y C++.
 
