Se agregaron cosas de metodologia de sistemas

--- a/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -1,5 +1,5 @@
->[!tldr] ¿Que es en si un Modelo de Ciclo de Vida?
->No es mas que un conjunto de actividades o pasos que hay que seguir con el objetivo de crear un software, con la mejor calidad posible, acorde a las necesidades y requerimientos de los usuarios.
+>[!tldr] ¿Qué es en sí un Modelo de Ciclo de Vida?
+>No es más que un conjunto de actividades o pasos que hay que seguir con el objetivo de crear un software, con la mejor calidad posible, acorde a las necesidades y requerimientos de los usuarios.
 
 >[!important] Respuesta del GPT
 >Un modelo de ciclo de vida en el desarrollo de software es un marco conceptual que describe las fases por las que pasa un sistema de software desde su concepción hasta su retiro o finalización. Las etapas incluyen la recolección de requisitos, diseño, implementación, pruebas, mantenimiento y eventualmente el retiro del sistema.
@@ -25,7 +25,7 @@ Todos los procesos de software incluyen cuatro actividades fundamentales:
 4. **Evolución**: Para satisfacer necesidades cambiantes.
 
 >[!note] Variaciones
->Si bien estos prasos van a estar presentes en todos los procesos, el nombre de estos puede variar según los autores o incluso ser divididos en dos etapas mas especificas.
+>Si bien estos pasos van a estar presentes en todos los procesos, el nombre de estos puede variar según los autores o incluso ser divididos en dos etapas más especificas.
 
 Cabe resaltar que no existe un proceso ideal, ya que esto va a variar dependiendo el tipo de proyecto que se vaya a realizar o de otros factores adyacentes como costos o fecha de entrega. Además, muchas organizaciones diseñan sus propios procesos de desarrollo de software, basándose en modelos ya existentes o tomando algunas características de estos mismos, de forma que se adapten de manera correcta a su forma de desarrollo y a las necesidades del mismo.
 Los procesos tienen en cuenta las características específicas de los sistemas (sistemas críticos, empresariales, etc.); cuyo principal propósito siempre es entregar a tiempo el software y con calidad para satisfacer a quienes patrocinaron su creación y a aquellos que lo usarán.
