Se re acomodo la parte de 'Modelo de ciclo de vida' y se agrego mas cosas en el apartado de proceso de SO

--- a/3° Año/Metodología de Sistemas I/Unidad 2/2. Tipos de Modelos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 2/2. Tipos de Modelos.md
@@ -148,10 +148,14 @@ En este modelo, la construcción en su totalidad de cada uno de los proyectos es
 
 # Estudio de Factibilidad
 
+Un estudio de factibilidad es una evaluación de cómo se puede llevar a cabo con éxito un proyecto propuesto. Se lleva a cabo para decidir si un proyecto es viable desde una perspectiva técnica y económica. El estudio de factibilidad puede involucrar una variedad de aspectos, que pueden incluir:
+
 - **Factibilidad Técnica**: Es una medida del éxito de la puesta en práctica de la solución técnica específica y de la disponibilidad de los recursos y los conocimientos técnicos necesarios.
 - **Factibilidad Financiera y Económica**: Es una medida de la eficacia de los costos asociados a un proyecto o una solución, recibe el nombre de análisis costo-beneficio. También se contempla si se va a buscar financiación para realizar el proyecto o se lo hará con recursos propios.
 - **Factibilidad de Operacional**: Los proyectos propuestos únicamente tienen beneficio cuando logran ingresar al grupo de sistemas de información que satisfacen los requerimientos de la organización. En pocas palabras, el software va a generar un beneficio si los usuarios lo logran usar debidamente.
 - **Factibilidad de Fechas**: Es una medida del éxito que indica si un proyecto es razonable en el cumplimiento de su calendario. 
+
+El estudio de factibilidad lo lleva a cabo un pequeño equipo de personas (en ocasiones una o dos) que está familiarizado con técnicas de sistemas de información; dicho equipo comprende la parte de la empresa u organización que participara o se vera afectada por el proyecto, y es gente experta en los procesos de análisis y diseño de sistemas. En general, las personas que son responsables de evaluar la factibilidad son analistas capacitados o directivos.
 
 >[!tldr] La Factibilidad y su Transversalidad
 >El estudio de factibilidad al igual que muchas otras etapas, son transversales en el proceso de desarrollo de software, esto quiere decir que van a estar presente en todas las etapas del ciclo de vida del software.
