--- a/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/2. Planeamiento de Procesos.md
@@ -18,7 +18,7 @@ Cada proceso nuevo se coloca inicialmente en la cola de listos, donde espera has
 #### Los Planificadores
 
 El SO, como parte de su tarea de planificación, debe seleccionar de alguna manera el proceso que se encuentra en estas colas. Este proceso de selección es realizado mediante un planificador apropiado.
-Estos procesos se guardan en colas en un dispositivo de almacenamiento masivo (un disco), donde se mantienen para su posterior ejecución. El ***planificador a largo plazo o planificador de trabajo*** selecciona los procesos de esta cola y luego los carga en memoria para su ejecución, este planificador es el que controla el **grado de multiprogramación**. El ***planificador a corto plazo o planificador de CPU*** selecciona de entre los procesos que ya están preparados para su ejecución y asigna la CPU a uno de ellos. También se suele hablar de un tercer planificador, el ***planificador a mediano plazo***, que es el que se encarga de la gestión de la memoria virtual en caso de que un proceso necesite un módulo que no está cargado en memoria principal.
+Estos procesos se guardan en colas en un dispositivo de almacenamiento masivo (un disco), donde se mantienen para su posterior ejecución. El ***planificador a largo plazo o planificador de trabajo*** selecciona los procesos de esta cola y luego los carga en memoria para su ejecución, este planificador es el que controla el **grado de multiprogramación**. El ***planificador a corto plazo o planificador de CPU*** selecciona de entre los procesos que ya están preparados para su ejecución y asigna la CPU a uno de ellos. También se suele hablar de un tercer planificador, el ***planificador a mediano plazo***, que es el que se encarga de la gestión de la memoria; en caso de que un proceso necesite un módulo que no está cargado en memoria principal, y no haya mas espacio en la memoria principal para cargar las paginas de ese módulo, el planificador a mediano plazo sacara de memoria algunas paginas de otro procesos y cargara las que que necesite el proceso en ejecución. Los procesos a lo que se le quitara memoria será elegidos por el planificador de acuerdo a la información estadística de cada uno de los procesos.
 
 >[!tldr] Frecuencia de Ejecución de los Planificadores
 >La principal diferencia que existe entre los planificadores es que, por ejemplo, el planificador a corto plazo se va a ejecutar normalmente cada 100 milisegundos, debido al poco tiempo que hay enter la ejecución de los diferentes procesos.
