--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -62,7 +62,7 @@ Cada proceso se representa en el SO mediante un **bloque de control de proceso**
 - **Información contable:** Esta información incluye la cantidad de CPU y de tiempo real empleado, los límites de tiempo asignados, los números de cuenta, número de trabajo o proceso.
 - **Información del estado de E/S:** Esta información incluye la lista de dispositivos de E/S asignados al proceso, una lista de archivos abiertos, etc.
 
-A su vez, el PCB maneja 3 tablas: un puntero a la ***tabla de páginas*** muestra ka cantidad de páginas en la que está partido el programa e indica cuáles de esas páginas está en memoria principal y cuáles no. Un puntero a la ***tabla de recursos*** que contiene los dispositivos que va a solicitar el proceso. Y una ***tabla de archivos abiertos*** donde estan todos los archivos que utiliza el proceso en su ejecución.
+A su vez, el PCB maneja 3 tablas: un puntero a la ***tabla de páginas*** muestra la cantidad de páginas en la que está partido el programa e indica cuáles de esas páginas está en memoria principal y cuáles no. Un puntero a la ***tabla de recursos*** que contiene los dispositivos que va a solicitar el proceso. Y una ***tabla de archivos abiertos*** donde están todos los archivos que utiliza el proceso en su ejecución.
 
 >[!important] Gestión de PCB
 >Cuando se inicia la computadora, se crean todos los PCB que van a estar disponibles, esto significa que hay un número limitado. Cuando se crea un proceso, el Sistema Operativo le asigna a cada proceso nuevo un PCB, es el mismo Sistema Operativo el que una vez finalizado o muerto el proceso recuperar ese PCB y dejarlo disponible para que otro proceso pueda utilizarlo.
