Se agrego lo de analisis estructurado en MS y se completo lo de SO

--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -8,7 +8,7 @@ Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en cas
 >- ***Estática***: La ligadura se hace antes de la ejecución del programa, lo que le brinda más eficiencia a los programas, a su vez las ligaduras estáticas se pueden clasificar de dos formas:
 >	- **Enlaces elegidos por el programador** -> Al escribir un programa, el programador toma conscientemente muchas decisiones respecto a opciones de nombres de variables, tipos para las variables, etc. Que representan enlaces durante la traducción. El traductor del lenguaje utiliza estos enlaces para determinar la forma final del programa objeto. Por ejemplo, la declaración de un tipo a una variable (en caso de que el lenguaje funciones de esa manera)
 >	- **Enlaces elegidos por el traductor** -> Ciertos enlaces son elegidos por el traductor del lenguaje sin que el programador los especifique directamente. Por ejemplo, la localidad relativa de un objeto de datos en el almacenamiento asignado para un procedimiento, esto se maneja en general sin el conocimiento o intervención del programador. Como se guardan los arreglos, en su caso, es otra decisión que toma el traductor del lenguaje.
->- ***Dinámica*** Muchos enlaces se llevan a cabo durante la ejecución del programa. Esto incluye enlaces de variables a sus valores, así como el enlace de variables a localidades particulares de almacenamiento, este tipo de enlaces le da más flexibilidad al lenguaje, pero le quita seguridad. Es posible distinguir dos subcategorías importantes:
+>- ***Dinámica*** Muchos enlaces se llevan a cabo durante la ejecución del programa. Esto incluye enlaces de variables a sus valores, así como el enlace de variables a localidades particulares de almacenamiento, este tipo de enlaces le da más flexibilidad al lenguaje, pero le quita seguridad. Las ligaduras dinámicas se pueden realizar:
 >	- **Al inicio de la ejecución de una unidad** -> En casi todos los lenguajes, las clases importantes de enlaces solo pueden ocurrir en el momento de entrar a un subprograma o bloque durante la ejecución. Por ejemplo. En C y Pascal, el enlace de parámetros formales a reales y el enlace de parámetros formales a localidades particulares de almacenamiento solo pueden ocurrir a entrar a un subprograma.
 >	- **En cualquier punto de la ejecución** -> Ciertos enlaces pueden ocurrir en cualquier punto durante la ejecución de un programa. El ejemplo más importante en este caso es el enlace básico de variables a valores a través de asignación, aunque ciertos lenguajes como LISP también permiten que ocurra el enlace de nombres a localidades de almacenamiento en puntos arbitrarios del programa.
 
@@ -26,7 +26,7 @@ Un lenguaje utiliza el ***alcance estático*** (también llamados alcance léxic
 
 ## Las Declaraciones
 
-Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***declaraciones***. Una declaración es un enunciado de programa que sirve para comunicar al traductor del lenguaje, información acerca del nombre y tipo de los objetos de datos que se necesitan durante la ejecución del programa. Una declaración también puede servir para indicar los tiempos de vida deseados de los objetos de datos. (Dentro de un subprograma, por ejemplo). Estas declaraciones se pueden clasificar en:
+Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***declaraciones***. Una declaración es un enunciado de programa que sirve para comunicar al traductor del lenguaje información acerca del nombre y tipo de los objetos de datos que se necesitan durante la ejecución del programa. Una declaración también puede servir para indicar los tiempos de vida deseados de los objetos de datos. (Dentro de un subprograma, por ejemplo). Estas declaraciones se pueden clasificar en:
 
 - ***Implícitas***: La ligadura se establece la primera vez que el identificador es utilizado, de acuerdo a reglas implícitas del lenguaje, esto en detrimento de la *legibilidad* y la *confiabilidad*. Por Ej.: En PHP cuando se declara una variable no es necesario declarar su tipo, pero el intérprete liga su valor una vez encuentra una sentencia de asignación con esa variable.
 - ***Explícitas***: Una declaración define nombres de entidades y especifica su tipo particular. A su vez, estas pueden ser:
