--- a/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/1. Requerimientos.md
@@ -7,8 +7,9 @@ Los requerimientos de un sistema son descripciones de las necesidades de los cli
 
 #### Ingeniería de Requerimientos (IR)
 
-Se denomina ***ingeniería de requerimientos*** al proceso de describir, analizar, documentar y verificar los servicios y requerimiento.
-Existen dos niveles de descripción de requerimientos:
+Los requerimientos para un sistema son descripciones de lo que el sistema debe hacer: el servicio que ofrece y las restricciones en su operación. Tales requerimientos reflejan las necesidades de los clientes por un sistema que atienda cierto propósito, como sería controlar un dispositivo, colocar un pedido o buscar información.
+Al proceso de descubrir, analizar, documentar y verificar estos servicios y restricciones se le llama ***ingeniería de requerimientos*** (IR). En algunos casos, un requerimiento es simplemente un enunciado abstracto de alto nivel en un servicio que debe proporcionar un sistema, o bien, una restricción sobre un sistema.
+Algunos de los problemas que surgen durante el proceso de ingeniería de requerimientos son resultado del fracaso de hacer una separación clara entre esos diferentes niveles de descripción. Se distinguen con el uso del término “*requerimientos del usuario*” para representar los requerimientos abstractos de alto nivel; y “*requerimientos del sistema*” para caracterizar la descripción detallada de lo que el sistema debe hacer. Los requerimientos del usuario y los requerimientos del sistema se definen del siguiente modo:
 
 - **Requerimientos del usuario**: Definen qué servicios esperan los usuarios del sistema y las restricciones con las cuales este debe operar. La descripción de estos es más general y se suelen representar mediante ***diagramas de proceso de uso***
 - **Requerimientos del sistema**: Son descripciones más detalladas de las funciones, los servicios y las restricciones operacionales del sistema de software, suelen representarse mediante ***diagramas de caso de uso***. Estos se dividen en:
@@ -33,7 +34,7 @@ Como podemos ver, los requerimientos de usuario son más generales, en cambio, l
 
 ## Características de un Requerimiento
 
-Un requerimiento debe cumplir con las siguientes características para poder llegar a ser considerado bueno:  
+La inexactitud en la especificación de requerimientos causa muchos problemas en la ingeniería de software. Es natural que un desarrollador de sistemas interprete un requerimiento ambiguo de forma que simplifique su implementación. Sin embargo, con frecuencia, esto no es lo que desea el cliente. Tienen que establecerse nuevos requerimientos y efectuar cambios al sistema. Desde luego, esto aplaza la entrega del sistema y aumenta los costos. Es por eso que un requerimiento debe cumplir con las siguientes características para poder llegar a ser considerado bueno:
 
 1. **Conciso**: Fácil de leer y entender. Su redacción debe ser simple y clara para aquellos que vayan a consultarlo en un futuro.
 2. **Completo**: No necesita ampliar detalles en su redacción. Proporciona información suficiente para su comprensión.
