--- a/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 3/2. Proceso de Ingeniería de Requerimientos.md
@@ -5,15 +5,11 @@
 3. **Especificación de Requerimientos**.
 4. **Validación de Requerimientos**.
 
-Dicho proceso es iterativo, es decir, se realiza múltiples veces a la hora de la puesta en marcha del proceso de desarrollo; repasando estos mismos en cada una de las etapas del ciclo de vida.
+Estas actividades están organizadas como un proceso iterativo alrededor de una espiral, y la salida es un documento de requerimientos del sistema. La cantidad de tiempo y esfuerzo dedicados a cada actividad en cada iteración depende de la etapa del proceso global y el tipo de sistema que está siendo desarrollado. El número de iteraciones de la espiral tiende a variar, de modo que la espiral terminará después de adquirir algunos o todos los requerimientos del usuario.
 
 <span class="centerImg"> ![[MS-iteraccion-proceso-requerimientos.png]] </span>
 
-Todo este proceso se realiza con el único fin de que al terminar este mismo se obtenga el ***documento de requerimientos de software***. El cual es un comunicado oficial de lo que deben implementar los desarrolladores del sistema, incluye tanto los requerimientos del usuario para un sistema, como una especificación detallada de los requerimientos del sistema, este documento es esencial cuando se contrata a un profesional externo para que desarrolle el software. 
-
->[!info] Nota
->También suele nombrarse como ***especificación de requerimientos de software***.
-
+Como ya se mencionó, todo este proceso genera como resultado un ***documento de requerimientos de software***, que también suele nombrarse como ***especificación de requerimientos de software***. El cual es un comunicado oficial de lo que deben implementar los desarrolladores del sistema, incluye tanto los requerimientos del usuario para un sistema, como una especificación detallada de los requerimientos del sistema, este documento es esencial cuando se contrata a un profesional externo para que desarrolle el software.
 Para realizar estos documentos existe un estándar escrito por el IEEE en el cual se especifica la estructura base con la que debe contar este informe, obviamente no es obligatorio usar esta estructura por completo, ya que de acuerdo al tipo de proyecto que se desee llevar a cabo y como no el proceso que se haya elegido para desarrollar ese proyecto el documento poseerá una u otra sección.
 
 #### Técnicas para la Adquisición de Requerimientos
@@ -44,7 +40,7 @@ La adquisición de los requerimientos del cliente puede darse mediante distintos
 >- **Estructura de Embudo**: Es el inverso que la estructura de pirámide, es decir, se comienza con preguntas más generales y se finaliza con preguntas más específicas.
 >- **Estructura de Diamante**: en esta estructura se comienza con preguntas específicas, mediante la entrevista avanza se van haciendo preguntas más generales y se cierra la entrevista realizando, nuevamente, preguntas específicas.
 
-- **Encuestas**: Es una técnica de recopilación de información que consiste en un conjunto de preguntas u otros tipos de indicaciones con el objetivo de recopilar información de un encuestado. Esta técnica nos brinda algunas ventajas y desventajas por sobre las demás, como por ejemplo, el poder utilizarlo para muestras grandes, la posibilidad de usar preguntas abiertas y cerradas con el veneficio que estas últimas van a poder ser cuantificadas, ya sea utilizando una escala nominal o de intervalo. Como contraparte tiene que, al igual que las entrevistas, el desarrollar un cuestionario útil lleva tiempo de planeación.
+- **Encuestas**: Es una técnica de recopilación de información que consiste en un conjunto de preguntas u otros tipos de indicaciones con el objetivo de recopilar información de un encuestado. Esta técnica nos brinda algunas ventajas y desventajas por sobre las demás, como por ejemplo, el poder utilizarlo para muestras grandes, la posibilidad de usar preguntas abiertas y cerradas, con el beneficio que estas últimas van a poder ser cuantificadas, ya sea utilizando una escala nominal o de intervalo. Como contraparte tiene que, al igual que las entrevistas, el desarrollar un cuestionario útil lleva tiempo de planeación.
 
 >[!note] Sugerencias a la Hora de Crear un Cuestionario / Entrevista
 >Se debe definir claramente cuáles son los objetivos, debe tener consistencia en el estilo, además se debe mantener un orden entre las preguntas; priorizando las preguntas más importantes para el encuestado o en caso particulares introducir primero las preguntas menos controversiales, se recomienda también agrupar conceptos de contenido similar.
