--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -27,6 +27,9 @@ Cada proceso cuenta con su propio flujo de control (es decir, su propio contador
 > Pero el SO para hacer todo eso primero debe fijarse como gestiona la memoria, si es mediante ***paginación*** o por ***segmentación***, si el SO funciona mediante paginación se va a trozar el programa en *N* páginas del mismo tamaño. Por otro lado, sí funciona mediante segmentación, se va a dividir el programa en rutinas, las cuales pueden variar su tamaño de una a otras.
 > Esto es importante saberlo, ya que dependiendo de cuál de los dos modelos tome, el procesador va a cargar diferentes páginas o segmentos cuando se realice la ejecución de las instrucciones.
 
+>[!caution] Seguridad en la Creación de los Procesos
+>Cuando el programa pasa a ser una entidad activa, es decir, se convierte en proceso, el Sistema Operativo crea dicho proceso con permisos de solo lectura, esto con el fin de aportar mayor seguridad y evitar que cualquier otro proceso, sea de usuario o del SO escriba datos sobre este proceso, evitando tener que realizar rutinas de control.
+
 ## Estado del proceso
 
 A medida que se ejecuta un proceso, el proceso va cambiando de **estado**. El estado de un proceso se define, en parte, según la actividad actual de dicho proceso. Cada proceso puede estar en uno de los siguientes estados:
@@ -53,8 +56,9 @@ A lo largo de todo el ciclo de vida del proceso, éste puede cambiar de estado v
 
 ## Bloque de control de proceso
 
-Cada proceso se representa en el SO mediante un **bloque de control de proceso** (PCB, process control block), también denominado *bloque de control de tarea*. Un bloque de control de proceso contiene muchos elementos de información asociados con un proceso específico, entre los que se incluyen:
-- **Estado del proceso:** Uno de los cuantos mencionados anteriormente
+Cada proceso se representa en el SO mediante un **bloque de control de proceso** (PCB, process control block), también denominado *bloque de control de tarea*. Un bloque de control de proceso, es una estructura de tamaño estático, que contiene muchos elementos de información asociados con un proceso específico, entre los que se incluyen:
+- **Estado del proceso:** Uno de los cuantos mencionados anteriormente.
+- **Prioridad**: Existen dos tipos de prioridades, la original que es la que le asigna el sistema operativo cuando se crea el proceso, y la dinámica o actual la cual se va incrementando en cada ciclo del Sistema Operativo.
 - **Contador de programa:** El contador va a indicar la dirección de la siguiente instrucción que se debe ejecutar el proceso.
 - **Registros de la CPU:** Los registros varían en cuanto a número y tipo, dependiendo de la arquitectura de la computadora. La información de los estados de estos registros debe guardarse junto con el PC cuando se produce una interrupción, para que luego el proceso pueda continuar ejecutándose correctamente.
 - **Información de planificación de la CPU:** Esta información incluye la prioridad del proceso, los punteros a la cola de planificación y cualquier otro parámetro de planificación que se requiera.
@@ -68,9 +72,7 @@ A su vez, el PCB maneja 3 tablas: un puntero a la ***tabla de páginas*** muestr
 >Cuando se inicia la computadora, se crean todos los PCB que van a estar disponibles, esto significa que hay un número limitado. Cuando se crea un proceso, el Sistema Operativo le asigna a cada proceso nuevo un PCB, es el mismo Sistema Operativo el que una vez finalizado o muerto el proceso recuperar ese PCB y dejarlo disponible para que otro proceso pueda utilizarlo.
 
 En resumen, el PCB sirve simplemente como repositorio para la información variable con las que cuenta un proceso. Esto es así, ya que el programa cuando es convertido en un proceso y cargado en memoria principal, lo hace en modo solo lectura, esto con el fin de facilitarle las cosas al Sistema Operativo y que no tenga que preocuparse por posibles errores en la escritura de información.
-
->[!note] Anotación de Clase
->En los sistemas operativos más modernos, el PCB también almacena quien es el propietario del proceso, es decir, el usuario al que pertenece ese proceso o que solicito que se cree dicho proceso. 
+En los sistemas operativos más modernos. Es decir, los de tiempo compartido, el PCB también almacena quien es el usuario propietario de ese proceso. 
 
 >[!tldr] El Bloque de Control de Sistema
 >En los sistemas operativos, el Bloque de Control de Sistema (Sistema Control Block, SCB en inglés) es una estructura de datos utilizada por el sistema operativo para administrar y mantener información sobre el estado de un sistema en general. Esto puede incluir información como
